# content-room

./: .env.example  .gitignore  CHANGELOG.md  Justfile  PHASES.md  Procfile  README.md  asgi.py  config.yaml  de.milafrerichs.podcast-agent.plist  docker-compose.yml  main.py  preview.html  pyproject.toml  render.yaml  run.py  run_digest.py  working_log.md
.claude/: settings.local.json
.claude/plans/: luminous-skipping-snowflake.md
alembic/: env.py
alembic/versions/: 001_baseline.py  002_auth.py  003_orgs.py  005_sharing.py  006_user_item_state.py  007_shared_items.py
scripts/: migrate_to_user.py  sync_orgs.py
src/cli/: __init__.py
src/content_agent/: __init__.py  agent.py  db.py  delivery.py  digest.py  feed_discovery.py  mcp_server.py  models.py  summarizer.py
src/content_agent/queries/: articles.py  digest.py  episodes.py  feeds.py  item_state.py  orgs.py  runs.py  settings.py  shared_items.py  subscriptions.py  users.py
src/content_agent/templates/: _reader_controls.html  base.html  dashboard.html
src/content_agent/templates/articles/: _article_actions.html  _article_table.html  _feeds_list.html  _summarize_processing.html  detail.html  feeds.html  list.html
src/content_agent/templates/auth/: login.html  logout.html
src/content_agent/templates/episodes/: _episode_actions.html  _list_partial.html  _rerun_processing.html  detail.html  list.html
src/content_agent/templates/feed/: _download_status.html  _empty_feed.html  _episode_row.html  _feed_item.html  _feeds_list.html  _mobile_card.html  archive.html  discover.html  feeds.html  mobile.html  org_shared.html  podcast_detail.html  read_later.html  timeline.html
src/content_agent/templates/podcasts/: _download_result.html  _feeds_list.html  list.html
src/content_agent/templates/runs/: list.html
src/content_agent/templates/settings/: _task_model_row.html  settings.html
src/content_agent/web/: app.py  auth.py  deps.py  processing.py
src/content_agent/web/routes/: api.py  articles.py  dashboard.py  digest.py  episodes.py  feed.py  podcasts.py  runs.py  settings.py  webhooks.py
src/podcast_agent/: __init__.py  agent.py  db.py  models.py  summarizer.py
src/podcast_agent/templates/: base.html
src/podcast_agent/templates/episodes/: detail.html
src/podcast_agent/templates/runs/: list.html
src/podcast_agent/web/: app.py  deps.py
src/podcast_agent/web/routes/: dashboard.py  runs.py  (+1 more)
tests/: conftest.py  test_agent.py  test_db.py  test_digest.py  test_summarizer.py
