[project]
name = "content-agent"
dynamic = ["version"]
description = "Content aggregation agent for podcasts and articles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.0.0",
    "feedparser>=6.0.12",
    "openai-whisper>=20250625",
    "pydantic>=2.11.9",
    "pydantic-ai>=0.1.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "click>=8.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "python-multipart>=0.0.12",
]

[tool.setuptools.dynamic]
version = {attr = "content_agent.__version__"}


[project.scripts]
content-agent = "run:main"
news = "cli:cli"
news-cli = "cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
